completed improvements for the user validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 user.email.error=Email must be a well formed email address
 user.name.error= Name cannot be empty
 user.password.error = Password length must be greater than 5
+user.accounttype.error = Account type cannot be null
